tests/paczka1/fuzzy1/66967590.err
Error in line 11: rJdaeu A326 51,7
Error in line 26: FTZ S970 8,0
Error in line 23: xg3SZ0J A326 28,0
